<resources>
    <string name="app_name">Chords4N00bs</string>
    <string name="search">search</string>
    <string name="song">Song</string>
    <string name="artist">Artist</string>
    <string name="chord">Chord, no # accepted.</string>
    <string name="to_songbook">Or go to SongBook</string>
    <string name="go">GO</string>
    <string name="results">Results</string>
    <string name="transpose">Transpose</string>
    <string name="show_diagrams">Show chord diagrams</string>
    <string name="slower">-</string>
    <string name="faster">+</string>
    <string name="title">title</string>
    <string name="key">Key:</string>
    <string name="ukulele">Ukulele</string>
    <string name="guitar">Guitar</string>
    <string name="play">Play</string>
    <string name="save">Save</string>
    <string name="songbook">Songbook</string>
    <string name="diagram">diagram</string>
</resources>
